sass/components/_Carousel.scss
.carousel-wrapper {
	display: flex;
	width: 100vw;
	justify-content: center;
	align-items: center;
}

.fade-in {
	opacity: 1;
	animation-name: fadeInOpacity;
	animation-iteration-count: 1;
	animation-timing-function: ease-in;
	animation-duration: 1s;
}

.carousel-view {
	position: relative;
}

@keyframes fadeInOpacity {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

/** credit to w3schools **/
.forward-button, .back-button {
	position: absolute;
	top: 50%;
	cursor: pointer;
	width: auto;
	padding: 10px 22px;
	color: $white;
	font-weight: bold;
	font-family: MrEaves;
	font-size: 42px;
	transition: 3s ease;
	border-radius: 0 3px 3px 0;
	user-select: none;
}

.forward-button {
	right: 0%;
	border-radius: 3px 0 0 3px;
}

.forward-button:hover, .back-button:hover {
	background-color: #E0E0E0;
}
/**credit to w3schools **/

.carousel-index {
	margin-top: 15px;
	display: flex;
	justify-content: center;
	width: 100vw;
}

.carousel-image {
	position: relative;
	height: 30vw;
	width: 100vw;
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	.opaque-overlay {
		position: absolute;
		height: 100%;
		width: 100%;
		background: $black;
		opacity: 0.5;
	}
}

.carousel-legend {
	position: absolute;
	width: 20vw;
	top: 50%;
	margin: auto;
	left: 0;
	right: 0;
	font-family: HYPE;
	text-align: center;
	color: $white;
	font-size: 42px;
}

.image-source {
	height: 50vw;
	width: 100vw;
}

.index-dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.active, .index-dot:hover {
    background-color: #717171;
}



@media screen and (max-width: $tablet) {
	.carousel-image {
		height: 50vw;
	}
	.carousel-legend, .forward-button, .back-button {
		font-size: 20px;
	}
}

@media screen and (max-width: $mobile) {
	.carousel-legend {
		font-size: 15px;
	}
}

